--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.google.firebase.support-ios",
   "version": "12.0.0",
-  "displayName": "Firebase App Bundle iOS",
+  "displayName": "Firebase App (iOS Bundle)",
   "keywords": [
     "Google",
     "Firebase",
@@ -12,7 +12,7 @@
     "name": "Google LLC",
     "url": "https://firebase.google.com/docs/unity/setup"
   },
-  "description": "Firebase App is the core library every Firebase package depends on.",
+  "description": "Support running firebase in unity editor on mac",
   "unity": "2019.1",
   "dependencies": {
   }
